3 dec import tensorflow

--- a/CommentRecognize.ipynb
+++ b/CommentRecognize.ipynb
@@ -1,50 +1,185 @@
 {
-  "nbformat": 4,
-  "nbformat_minor": 0,
-  "metadata": {
-    "colab": {
-      "provenance": [],
-      "authorship_tag": "ABX9TyPOYLgaVqqGOfil1cXzYmz7",
-      "include_colab_link": true
-    },
-    "kernelspec": {
-      "name": "python3",
-      "display_name": "Python 3"
-    },
-    "language_info": {
-      "name": "python"
-    },
-    "accelerator": "GPU",
-    "gpuClass": "standard"
+ "nbformat": 4,
+ "nbformat_minor": 0,
+ "metadata": {
+  "colab": {
+   "provenance": [],
+   "authorship_tag": "ABX9TyPOYLgaVqqGOfil1cXzYmz7",
+   "include_colab_link": true
   },
-  "cells": [
+  "kernelspec": {
+   "name": "python3",
+   "display_name": "Python 3"
+  },
+  "language_info": {
+   "name": "python"
+  },
+  "accelerator": "GPU",
+  "gpuClass": "standard"
+ },
+ "cells": [
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "id": "view-in-github",
+    "colab_type": "text"
+   },
+   "source": [
+    "<a href=\"https://colab.research.google.com/github/imgnourt/ToxicComment/blob/main/CommentRecognize.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
+    "# Part 1: Introduction"
+   ],
+   "metadata": {
+    "id": "xbwpZQYyfCWu"
+   }
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
+    "## Prepare library and data"
+   ],
+   "metadata": {
+    "collapsed": false
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {
+    "id": "SaZyZMPke6hP"
+   },
+   "outputs": [
     {
-      "cell_type": "markdown",
-      "metadata": {
-        "id": "view-in-github",
-        "colab_type": "text"
-      },
-      "source": [
-        "<a href=\"https://colab.research.google.com/github/imgnourt/ToxicComment/blob/main/CommentRecognize.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
-      ]
-    },
-    {
-      "cell_type": "markdown",
-      "source": [
-        "# Part 1: Introduction"
-      ],
-      "metadata": {
-        "id": "xbwpZQYyfCWu"
-      }
-    },
-    {
-      "cell_type": "code",
-      "execution_count": null,
-      "metadata": {
-        "id": "SaZyZMPke6hP"
-      },
-      "outputs": [],
-      "source": []
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Collecting tensorflow\r\n",
+      "  Downloading tensorflow-2.11.0-cp39-cp39-macosx_10_14_x86_64.whl (244.3 MB)\r\n",
+      "\u001B[2K     \u001B[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001B[0m \u001B[32m244.3/244.3 MB\u001B[0m \u001B[31m895.6 kB/s\u001B[0m eta \u001B[36m0:00:00\u001B[0m00:01\u001B[0m00:08\u001B[0m\r\n",
+      "\u001B[?25hCollecting tensorboard<2.12,>=2.11\r\n",
+      "  Downloading tensorboard-2.11.0-py3-none-any.whl (6.0 MB)\r\n",
+      "\u001B[2K     \u001B[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001B[0m \u001B[32m6.0/6.0 MB\u001B[0m \u001B[31m911.2 kB/s\u001B[0m eta \u001B[36m0:00:00\u001B[0m00:01\u001B[0m00:01\u001B[0m\r\n",
+      "\u001B[?25hCollecting absl-py>=1.0.0\r\n",
+      "  Downloading absl_py-1.3.0-py3-none-any.whl (124 kB)\r\n",
+      "\u001B[2K     \u001B[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001B[0m \u001B[32m124.6/124.6 kB\u001B[0m \u001B[31m418.3 kB/s\u001B[0m eta \u001B[36m0:00:00\u001B[0ma \u001B[36m0:00:01\u001B[0m\r\n",
+      "\u001B[?25hRequirement already satisfied: numpy>=1.20 in /Users/imgnourt/opt/anaconda3/lib/python3.9/site-packages (from tensorflow) (1.21.5)\r\n",
+      "Collecting tensorflow-estimator<2.12,>=2.11.0\r\n",
+      "  Downloading tensorflow_estimator-2.11.0-py2.py3-none-any.whl (439 kB)\r\n",
+      "\u001B[2K     \u001B[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001B[0m \u001B[32m439.2/439.2 kB\u001B[0m \u001B[31m653.7 kB/s\u001B[0m eta \u001B[36m0:00:00\u001B[0ma \u001B[36m0:00:01\u001B[0m\r\n",
+      "\u001B[?25hCollecting astunparse>=1.6.0\r\n",
+      "  Downloading astunparse-1.6.3-py2.py3-none-any.whl (12 kB)\r\n",
+      "Requirement already satisfied: h5py>=2.9.0 in /Users/imgnourt/opt/anaconda3/lib/python3.9/site-packages (from tensorflow) (3.7.0)\r\n",
+      "Requirement already satisfied: six>=1.12.0 in /Users/imgnourt/opt/anaconda3/lib/python3.9/site-packages (from tensorflow) (1.16.0)\r\n",
+      "Collecting grpcio<2.0,>=1.24.3\r\n",
+      "  Downloading grpcio-1.51.1-cp39-cp39-macosx_10_10_x86_64.whl (4.6 MB)\r\n",
+      "\u001B[2K     \u001B[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001B[0m \u001B[32m4.6/4.6 MB\u001B[0m \u001B[31m888.0 kB/s\u001B[0m eta \u001B[36m0:00:00\u001B[0m00:01\u001B[0m00:01\u001B[0m\r\n",
+      "\u001B[?25hCollecting protobuf<3.20,>=3.9.2\r\n",
+      "  Downloading protobuf-3.19.6-cp39-cp39-macosx_10_9_x86_64.whl (980 kB)\r\n",
+      "\u001B[2K     \u001B[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001B[0m \u001B[32m980.5/980.5 kB\u001B[0m \u001B[31m996.0 kB/s\u001B[0m eta \u001B[36m0:00:00\u001B[0ma \u001B[36m0:00:01\u001B[0m\r\n",
+      "\u001B[?25hCollecting google-pasta>=0.1.1\r\n",
+      "  Downloading google_pasta-0.2.0-py3-none-any.whl (57 kB)\r\n",
+      "\u001B[2K     \u001B[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001B[0m \u001B[32m57.5/57.5 kB\u001B[0m \u001B[31m865.5 kB/s\u001B[0m eta \u001B[36m0:00:00\u001B[0m \u001B[36m0:00:01\u001B[0m\r\n",
+      "\u001B[?25hCollecting flatbuffers>=2.0\r\n",
+      "  Downloading flatbuffers-22.11.23-py2.py3-none-any.whl (26 kB)\r\n",
+      "Collecting opt-einsum>=2.3.2\r\n",
+      "  Downloading opt_einsum-3.3.0-py3-none-any.whl (65 kB)\r\n",
+      "\u001B[2K     \u001B[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001B[0m \u001B[32m65.5/65.5 kB\u001B[0m \u001B[31m994.0 kB/s\u001B[0m eta \u001B[36m0:00:00\u001B[0m \u001B[36m0:00:01\u001B[0m\r\n",
+      "\u001B[?25hCollecting termcolor>=1.1.0\r\n",
+      "  Downloading termcolor-2.1.1-py3-none-any.whl (6.2 kB)\r\n",
+      "Collecting gast<=0.4.0,>=0.2.1\r\n",
+      "  Downloading gast-0.4.0-py3-none-any.whl (9.8 kB)\r\n",
+      "Collecting libclang>=13.0.0\r\n",
+      "  Downloading libclang-14.0.6-py2.py3-none-macosx_10_9_x86_64.whl (13.2 MB)\r\n",
+      "\u001B[2K     \u001B[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001B[0m \u001B[32m13.2/13.2 MB\u001B[0m \u001B[31m910.0 kB/s\u001B[0m eta \u001B[36m0:00:00\u001B[0m00:01\u001B[0m00:01\u001B[0m\r\n",
+      "\u001B[?25hRequirement already satisfied: setuptools in /Users/imgnourt/opt/anaconda3/lib/python3.9/site-packages (from tensorflow) (63.4.1)\r\n",
+      "Collecting tensorflow-io-gcs-filesystem>=0.23.1\r\n",
+      "  Downloading tensorflow_io_gcs_filesystem-0.28.0-cp39-cp39-macosx_10_14_x86_64.whl (1.6 MB)\r\n",
+      "\u001B[2K     \u001B[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001B[0m \u001B[32m1.6/1.6 MB\u001B[0m \u001B[31m907.8 kB/s\u001B[0m eta \u001B[36m0:00:00\u001B[0m00:01\u001B[0m00:01\u001B[0m\r\n",
+      "\u001B[?25hRequirement already satisfied: wrapt>=1.11.0 in /Users/imgnourt/opt/anaconda3/lib/python3.9/site-packages (from tensorflow) (1.14.1)\r\n",
+      "Collecting keras<2.12,>=2.11.0\r\n",
+      "  Downloading keras-2.11.0-py2.py3-none-any.whl (1.7 MB)\r\n",
+      "\u001B[2K     \u001B[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001B[0m \u001B[32m1.7/1.7 MB\u001B[0m \u001B[31m799.7 kB/s\u001B[0m eta \u001B[36m0:00:00\u001B[0m00:01\u001B[0m00:01\u001B[0m\r\n",
+      "\u001B[?25hRequirement already satisfied: packaging in /Users/imgnourt/opt/anaconda3/lib/python3.9/site-packages (from tensorflow) (21.3)\r\n",
+      "Requirement already satisfied: typing-extensions>=3.6.6 in /Users/imgnourt/opt/anaconda3/lib/python3.9/site-packages (from tensorflow) (4.3.0)\r\n",
+      "Requirement already satisfied: wheel<1.0,>=0.23.0 in /Users/imgnourt/opt/anaconda3/lib/python3.9/site-packages (from astunparse>=1.6.0->tensorflow) (0.37.1)\r\n",
+      "Collecting tensorboard-data-server<0.7.0,>=0.6.0\r\n",
+      "  Downloading tensorboard_data_server-0.6.1-py3-none-macosx_10_9_x86_64.whl (3.5 MB)\r\n",
+      "\u001B[2K     \u001B[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001B[0m \u001B[32m3.5/3.5 MB\u001B[0m \u001B[31m880.8 kB/s\u001B[0m eta \u001B[36m0:00:00\u001B[0m00:01\u001B[0m00:01\u001B[0m\r\n",
+      "\u001B[?25hCollecting tensorboard-plugin-wit>=1.6.0\r\n",
+      "  Downloading tensorboard_plugin_wit-1.8.1-py3-none-any.whl (781 kB)\r\n",
+      "\u001B[2K     \u001B[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001B[0m \u001B[32m781.3/781.3 kB\u001B[0m \u001B[31m759.7 kB/s\u001B[0m eta \u001B[36m0:00:00\u001B[0ma \u001B[36m0:00:01\u001B[0m\r\n",
+      "\u001B[?25hRequirement already satisfied: werkzeug>=1.0.1 in /Users/imgnourt/opt/anaconda3/lib/python3.9/site-packages (from tensorboard<2.12,>=2.11->tensorflow) (2.0.3)\r\n",
+      "Collecting google-auth<3,>=1.6.3\r\n",
+      "  Downloading google_auth-2.15.0-py2.py3-none-any.whl (177 kB)\r\n",
+      "\u001B[2K     \u001B[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001B[0m \u001B[32m177.0/177.0 kB\u001B[0m \u001B[31m1.0 MB/s\u001B[0m eta \u001B[36m0:00:00\u001B[0ma \u001B[36m0:00:01\u001B[0m\r\n",
+      "\u001B[?25hCollecting google-auth-oauthlib<0.5,>=0.4.1\r\n",
+      "  Downloading google_auth_oauthlib-0.4.6-py2.py3-none-any.whl (18 kB)\r\n",
+      "Requirement already satisfied: requests<3,>=2.21.0 in /Users/imgnourt/opt/anaconda3/lib/python3.9/site-packages (from tensorboard<2.12,>=2.11->tensorflow) (2.28.1)\r\n",
+      "Requirement already satisfied: markdown>=2.6.8 in /Users/imgnourt/opt/anaconda3/lib/python3.9/site-packages (from tensorboard<2.12,>=2.11->tensorflow) (3.3.4)\r\n",
+      "Requirement already satisfied: pyparsing!=3.0.5,>=2.0.2 in /Users/imgnourt/opt/anaconda3/lib/python3.9/site-packages (from packaging->tensorflow) (3.0.9)\r\n",
+      "Requirement already satisfied: pyasn1-modules>=0.2.1 in /Users/imgnourt/opt/anaconda3/lib/python3.9/site-packages (from google-auth<3,>=1.6.3->tensorboard<2.12,>=2.11->tensorflow) (0.2.8)\r\n",
+      "Collecting rsa<5,>=3.1.4\r\n",
+      "  Downloading rsa-4.9-py3-none-any.whl (34 kB)\r\n",
+      "Collecting cachetools<6.0,>=2.0.0\r\n",
+      "  Downloading cachetools-5.2.0-py3-none-any.whl (9.3 kB)\r\n",
+      "Collecting requests-oauthlib>=0.7.0\r\n",
+      "  Downloading requests_oauthlib-1.3.1-py2.py3-none-any.whl (23 kB)\r\n",
+      "Requirement already satisfied: certifi>=2017.4.17 in /Users/imgnourt/opt/anaconda3/lib/python3.9/site-packages (from requests<3,>=2.21.0->tensorboard<2.12,>=2.11->tensorflow) (2022.9.24)\r\n",
+      "Requirement already satisfied: urllib3<1.27,>=1.21.1 in /Users/imgnourt/opt/anaconda3/lib/python3.9/site-packages (from requests<3,>=2.21.0->tensorboard<2.12,>=2.11->tensorflow) (1.26.11)\r\n",
+      "Requirement already satisfied: idna<4,>=2.5 in /Users/imgnourt/opt/anaconda3/lib/python3.9/site-packages (from requests<3,>=2.21.0->tensorboard<2.12,>=2.11->tensorflow) (3.3)\r\n",
+      "Requirement already satisfied: charset-normalizer<3,>=2 in /Users/imgnourt/opt/anaconda3/lib/python3.9/site-packages (from requests<3,>=2.21.0->tensorboard<2.12,>=2.11->tensorflow) (2.0.4)\r\n",
+      "Requirement already satisfied: pyasn1<0.5.0,>=0.4.6 in /Users/imgnourt/opt/anaconda3/lib/python3.9/site-packages (from pyasn1-modules>=0.2.1->google-auth<3,>=1.6.3->tensorboard<2.12,>=2.11->tensorflow) (0.4.8)\r\n",
+      "Collecting oauthlib>=3.0.0\r\n",
+      "  Downloading oauthlib-3.2.2-py3-none-any.whl (151 kB)\r\n",
+      "\u001B[2K     \u001B[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001B[0m \u001B[32m151.7/151.7 kB\u001B[0m \u001B[31m1.1 MB/s\u001B[0m eta \u001B[36m0:00:00\u001B[0ma \u001B[36m0:00:01\u001B[0m\r\n",
+      "\u001B[?25hInstalling collected packages: tensorboard-plugin-wit, libclang, flatbuffers, termcolor, tensorflow-io-gcs-filesystem, tensorflow-estimator, tensorboard-data-server, rsa, protobuf, opt-einsum, oauthlib, keras, grpcio, google-pasta, gast, cachetools, astunparse, absl-py, requests-oauthlib, google-auth, google-auth-oauthlib, tensorboard, tensorflow\r\n",
+      "Successfully installed absl-py-1.3.0 astunparse-1.6.3 cachetools-5.2.0 flatbuffers-22.11.23 gast-0.4.0 google-auth-2.15.0 google-auth-oauthlib-0.4.6 google-pasta-0.2.0 grpcio-1.51.1 keras-2.11.0 libclang-14.0.6 oauthlib-3.2.2 opt-einsum-3.3.0 protobuf-3.19.6 requests-oauthlib-1.3.1 rsa-4.9 tensorboard-2.11.0 tensorboard-data-server-0.6.1 tensorboard-plugin-wit-1.8.1 tensorflow-2.11.0 tensorflow-estimator-2.11.0 tensorflow-io-gcs-filesystem-0.28.0 termcolor-2.1.1\r\n"
+     ]
     }
-  ]
+   ],
+   "source": [
+    "# There is currently no official GPU support for MacOS.\n",
+    "!python3 -m pip install tensorflow\n",
+    "# Verify install:\n",
+    "!python3 -c \"import tensorflow as tf; print(tf.reduce_sum(tf.random.normal([1000, 1000])))\""
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "outputs": [],
+   "source": [
+    "import pandas as pd\n",
+    "import matplotlib.pyplot as plt\n",
+    "import numpy as np\n",
+    "import os\n",
+    "import tensorflow as tf\n",
+    "import seaborn as sns\n",
+    "import math\n",
+    "plt.style.use(\"seaborn\")\n",
+    "%matplotlib inline\n",
+    "import warnings\n",
+    "warnings.filterwarnings(\"ignore\")"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "is_executing": true
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "outputs": [],
+   "source": [],
+   "metadata": {
+    "collapsed": false
+   }
+  }
+ ]
 }
